--- a/style.css
+++ b/style.css
@@ -4,13 +4,15 @@ body{
 .os{
     color: aqua;
 }
-section{
+.top-section{
     display: flex;
     padding: 10%;
     background-image: url(image/p7.png);
 }
 .half-width{
     width: 50%;
+    margin: 10px;
+    padding: 10px;
 }
 .half-width img{
     width: 100%;
@@ -42,5 +44,10 @@ section{
 }
 .lower-div img{
     width: 100%;
+}
+.bottom-section{
+    display: flex;
+    padding: 10%;
+    background-image: url(image/p7.png);
 }
 
